# oblivion-conflicts

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: reborn-shortcut.sh
scripts/: _probe_lib.pas  add_bash_tag.pas  clean_masters.pas  disable_all_patrols.pas  dump_chain_subrecord.pas  dump_masters.pas  dump_npc_packages.pas  dump_npc_pkids_v2.pas  dump_record_full.pas  list_owned.pas  list_scpts.pas  merge_plugins.pas  plugin_size.pas  query_between.pas  query_list.pas  query_record.pas  query_record_v2.pas  quest_flags.pas  references_to.pas
src/oblivion_conflicts/: __main__.py  cli.py  errors.py  output.py  plugin_source.py  xedit_runner.py
tests/: README.md  run_tests.sh
tests/fixtures/: loadorder.txt
tests/fixtures/_generator/: README.md  generate_fixtures.pas  patch_smoketest.pas
tests/fixtures/data/: Master.esm  OverrideA.esp  OverrideB.esp
tests/fixtures/expected/: query_between.json  query_list.json  query_record.json
tests/unit/: test_cli.py  test_errors.py  test_output.py  test_plugin_source.py  test_xedit_runner.py
